# zako3

./: Cargo.toml  TODO.md  flake.nix  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  docker-publish.yml
.opencode/agents/: clean.md  code.md  design.md  feedback.md  main.md  review.md
.opencode/plan/: plan.md
audio-engine/: Cargo.toml
audio-engine/audio/: Cargo.toml
audio-engine/audio/src/: constant.rs  decoder.rs  error.rs  lib.rs  metrics.rs  mixer.rs  stream_input.rs  types.rs  util.rs
audio-engine/controller/: Cargo.toml  build.rs
audio-engine/controller/src/: config.rs  interface.rs  lib.rs  main.rs
audio-engine/core/: Cargo.toml
audio-engine/core/src/: engine.rs  lib.rs  types.rs  util.rs
audio-engine/core/src/codec/: decoder.rs  stream_input.rs
audio-engine/core/src/engine/: mixer.rs  session.rs  session_manager.rs
audio-engine/core/src/service/: discord.rs  state.rs  taphub.rs
audio-engine/core/src/util/: queue_name_gen.rs
audio-engine/infra/: Cargo.toml
audio-engine/infra/src/: discord.rs  lib.rs  state.rs  taphub.rs
audio-engine/protos/: Cargo.toml  build.rs
audio-engine/protos/src/: lib.rs
audio-engine/src/: engine.rs  error.rs  main.rs  service.rs  types.rs
audio-engine/src/engine/: session.rs
audio-engine/src/engine/tests/: session_control_test.rs
audio-engine/src/service/: discord.rs  session.rs  state.rs  taphub.rs
audio-engine/telemetry/: Cargo.toml
audio-engine/telemetry/src/: observability.rs
audio-engine/types/: Cargo.toml
audio-engine/types/src/: error.rs  lib.rs
cache/: Cargo.toml
crates/metrics/src/: service.rs
crates/preload-cache/src/: cache.rs  lib.rs  preload.rs
crates/states/src/: lib.rs  tap_names.rs
crates/taphub-transport/client/src/: lib.rs
crates/taphub-transport/lib/tests/: integration.rs
crates/taphub-transport/server/src/: lib.rs
crates/types/src/: error.rs
docs/: backend_api_plan.md
docs/en/: hq-features.md
helm/templates/services/: audio-engine.yaml
hq/: .gitignore  LICENSE  PLAN.md  README.md  TODO.md  flake.nix  hq-sample.cabal  package.json  package.yaml  zako3-hq.cabal
hq/app/: Main.hs
hq/backend/: Cargo.toml
hq/backend/src/: lib.rs
hq/backend/src/handlers/: auth.rs  mod.rs  tap.rs
hq/boot/: Cargo.toml
hq/boot/src/: main.rs
hq/bot/: Cargo.toml
hq/bot/src/: lib.rs  main.rs
hq/bot/src/commands/: mod.rs  tap.rs
hq/core/: Cargo.toml
hq/core/src/: config.rs  error.rs  lib.rs
hq/core/src/repo/: mod.rs  tap.rs  user.rs
hq/core/src/service/: auth.rs  mod.rs  tap.rs
hq/scripts/: hello.hs
hq/src/: Lib.hs  index.ts
hq/src/API/: Server.hs
hq/src/Data/: Types.hs
hq/src/Data/Model/: AudioRequest.hs  TrackRequest.hs
hq/src/Data/Persist/: Tap.hs  TapTrans.hs
hq/src/Data/State/: Queue.hs  (+1 more)
hq/src/Domain/: AudioRequest.hs  Sample.hs
hq/src/Env/: Cache.hs
hq/src/Infrastructure/: App.hs  Mongo.hs
hq/src/Serialize/: Bson.hs  Str.hs
hq/src/Util/: TrackIdGen.hs
hq/src/api/: tap.routes.ts  user.routes.ts
hq/src/config/: env.ts
hq/src/routes/: health.ts  index.ts  settings.ts
hq/test/Data/: TypesSpec.hs
hq/types/: Cargo.toml
hq/types/src/: lib.rs  settings.rs  tap.rs  user.rs
libs/tap-sdk/src/: builder.rs  lib.rs  stream.rs
libs/zakofish/: Cargo.toml
libs/zakofish/src/: tap_pf3.rs  tap_streams.rs
protos/: audio-engine.proto  audio_engine.proto
scripts/: publish-all.sh  publish-audio-engine.sh  publish-taphub.sh
scripts/publish/: any.sh  audio-engine.sh  hq.sh  taphub.sh  traffic-light.sh
services/audio-engine/controller/: .env.example
services/hq/: Dockerfile
services/traffic-light/: Dockerfile
taphub/: Cargo.toml
web/: IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  SUMMARY.md  TODO.md  package.json
web/src/app/: providers.tsx  router.tsx
web/src/hooks/: index.ts  use-paginated-query.ts  use-pagination.ts
web/src/layouts/: root-layout.tsx
web/src/lib/: api-client.ts  api-helpers.ts  constants.ts
web/src/pages/: index.ts
web/src/types/: admin.ts  api.ts  auth.ts  index.ts  notification.ts  tap.ts  user.ts
workers/cache/src/: main.rs
zakoctl/: Cargo.toml  README.md  REFERENCE.md
zakoctl/src/: cli.rs  config.rs  main.rs
zakoctl/src/services/: mod.rs
(+87 files in other folders)
