[workspace]
resolver = "3"
members = ["audio-engine/controller","audio-engine/core", "audio-engine/infra", "audio-engine/types","crates/discord-oauth2", "crates/zako3-data", "taphub"]

[workspace.dependencies]
zako3-audio-engine-types = { path = "audio-engine/types" }
zako3-audio-engine-core = { path = "audio-engine/core" }
zako3-audio-engine-infra = { path = "audio-engine/infra" }

[profile.dev]
incremental = false
overflow-checks = false
codegen-units = 1
debug = true
opt-level = 0
panic = "unwind"

[profile.test]
incremental = false
overflow-checks = false
codegen-units = 1
debug = true
opt-level = 0
panic = "unwind"
