[package]
name = "zako3-audio-engine-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
songbird = "0.5.0"
zako3-audio-engine-types.workspace = true
zako3-audio-engine-core.workspace = true

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
