[package]
name = "hq-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["full"] }
utoipa = { workspace = true, features = ["uuid", "chrono"] }
